<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/song_controller_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/display_title"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/display_remainTime"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/display_currentTime"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Control Buttons -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/controller_button_previous"
            android:text="@string/controller_button_previous"
            android:drawableTop="@drawable/ic_action_previous"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/controller_button_play"
            android:text="@string/controller_button_play"
            android:drawableTop="@drawable/ic_action_play"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/controller_button_stop"
            android:text="@string/controller_button_stop"
            android:drawableTop="@drawable/ic_action_stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Display Mode -->
    <LinearLayout
        android:padding="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/display_repeatMode"
            android:padding="4dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:text="@string/controller_display_mode_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/display_quickMode"
            android:padding="4dp"
            android:text="@string/controller_display_mode_quick"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
